--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ TWITCH_CLIENT_ID=
 TWITCH_SECRET=
 CLIP_LOOKBACK_HOURS=2
 CLIP_CHECK_SECONDS=15
+CLIP_MAX_PAGES=1
 CLIP_SHOW_DETAILS=1
 CLIP_API_LAG_SECONDS=15
 CLIP_API_TIMEOUT=10
