Rewrite bot and docs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DISCORD_TOKEN=
 TWITCH_CLIENT_ID=
 TWITCH_SECRET=
+# Opcionais
+CLIP_CHECK_SECONDS=30
+CLIP_LOOKBACK_HOURS=2
+CLIP_SHOW_DETAILS=true
+CLIP_ATTACH_VIDEO=false
+CLIP_API_TIMEOUT=10
